--- a/internship/views/login.ejs
+++ b/internship/views/login.ejs
@@ -1,17 +1,16 @@
 <%- include header %>
-<div class="text-center page-title">用户登录</div>
+<div class="text-center page-title">内推实习</div>
 <div class="container">
     <div class="row">
         <div class="col-xs-4 col-xs-offset-4">
             <form method="post">
                 <%- message %>
                 <div class="form-group">
-                    <input type="text" class="form-control" name="username" placeholder="用户名">
+                   <a href="/post/<%=note._id %>">发布内推</a>
                 </div>
                 <div class="form-group">
-                    <input type="password" class="form-control" name="password" placeholder="密码">
+                   <a href="/detail/<%=note._id %>">查看内推</a>
                 </div>
-                <button type="submit" class="btn btn-default center-block">登录</button>
             </form>
         </div>
     </div>
