--- a/internship/views/login.ejs
+++ b/internship/views/login.ejs
@@ -6,10 +6,10 @@
             <form method="post">
                 <%- message %>
                 <div class="form-group">
-                   <a href="/post/<%=note._id %>">发布内推</a>
+                   <a href="/post/">发布内推</a>
                 </div>
                 <div class="form-group">
-                   <a href="/detail/<%=note._id %>">查看内推</a>
+                   <a href="/detail/">查看内推</a>
                 </div>
             </form>
         </div>
