--- a/internship/views/list.ejs
+++ b/internship/views/list.ejs
@@ -3,22 +3,22 @@
 <div class = "container">
     <div class="row">
         <table class = "table table-striped">
-            <caption>我的笔记列表</caption>
+            <caption>少年，你的实习</caption>
             <thead>
             <tr>
-                <th>标题</th>
-                <th>标签</th>
-                <th>日期</th>
+                <th>公司</th>
+                <th>类别</th>
+                <th>发布时间</th>
             </tr>
             </thead>
             <tbody>
-            <%notes.forEach(function(note){%>
+            <%interns.forEach(function(intern){%>
             <tr>
                 <td>
-                    <a href="/detail/<%=note._id %>"><%=note.title %></a>
+                    <a href="/detail/<%=intern._id %>"><%=interns.company %></a>
                 </td>
-                <td><%= note.tag %></td>
-                <td><%= note.createTime %></td>
+                <td><%= interns.category %></td>
+                <td><%= interns.createTime %></td>
             </tr>
             <%});%>
             </tbody>
