--- a/internship/views/login.ejs
+++ b/internship/views/login.ejs
@@ -9,7 +9,7 @@
                    <a href="/post/">发布内推</a>
                 </div>
                 <div class="form-group">
-                   <a href="/detail/">查看内推</a>
+                   <a href="/list/">查看内推</a>
                 </div>
             </form>
         </div>
