--- a/internship/views/detail.ejs
+++ b/internship/views/detail.ejs
@@ -11,6 +11,8 @@
                 <h1 class="text-center">实习消息</h1>
                 <p class="text-center">
                     <span class="label label-info"><%=intern.category%></span>
+                    <span class="label label-info"><%=intern.company%></span>
+
                     <span class="create-time">
                         <span class="text-bold">时间:</span>
                         <%= moment(intern.createTime).locale('zh-cn').format('LL HH:mm:ss')%>
