--- a/internship/views/post.ejs
+++ b/internship/views/post.ejs
@@ -38,7 +38,8 @@
         </div>
     </div>
     <div class='demos-content-padded' type="submit">
-        <a href="#" class="weui_btn weui_btn_plain_default">检查后，确认发布</a>
+ 	<button type="submit" class="weui_btn weui_btn_plain_default">检查后，确认发布</button>
+
     </div>
 <%-include footer%>
 
