--- a/internship/views/login.ejs
+++ b/internship/views/login.ejs
@@ -1,16 +1,16 @@
 <%- include header %>
 <div class="weui_msg">
 <div class="weui_text_area">
-    <h1>内推实习</h1>
+    <h1 style="color:#FF6600;">内推实习</h1>
 </div>
     <div class="weui_opr_area">
         <p class="weui_btn_area">
-                <a href="/post/"class="weui_btn weui_btn_primary">发布内推</a>
+                <a href="/post/"class="btn btn-danger btn-lg btn-block">发布内推</a>
         </p>
     </div>
     <div class="weui_opr_area">
         <p class="weui_btn_area">
-            <a href="/list/"class="weui_btn weui_btn_primary">查看内推</a>
+            <a href="/list/"class="btn btn-primary btn-lg btn-block">查看内推</a>
         </p>
     </div>
 </div>
