--- a/internship/views/header.ejs
+++ b/internship/views/header.ejs
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <title><%= title %></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">    <title><%= title %></title>
     <link rel="stylesheet" href="/css/common.css">
+    <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="/jquery-weui/dist/lib/weui.css">
     <link rel="stylesheet" href="/jquery-weui/dist/css/jquery-weui.css">
+    <link rel="stylesheet" href="css/demos.css">
+
 </head>
 <body >
 
