--- a/internship/views/list.ejs
+++ b/internship/views/list.ejs
@@ -1,28 +1,19 @@
 <%-include header%>
 
 <div class="weui_panel weui_panel_access">
-    <div class="weui_panel_hd">
+    <div class="weui_panel_hd text-center">
        <h1>少年，你的实习</h1>
     </div>
-    <div class="weui_panel_bd">
+    <%interns.forEach(function(intern){%>
+    <div>
         <div class="weui_media_box weui_media_text">
-            <h4 class="weui_media_title">标题一</h4>
-            <p class="weui_media_desc">由各种物质组成的巨型球状天体，叫做星球。星球有一定的形状，有自己的运行轨道。</p>
+            <a href="/detail/<%=intern._id %>">
+                <h4 class="weui_media_title text-center"><%=intern.company %></h4>
+                <p class="weui_media_desc"><%= intern.category %>&nbsp&nbsp<%= intern.createTime %></p>
+            </a>
         </div>
-        <div class="weui_media_box weui_media_text">
-            <h4 class="weui_media_title">标题二</h4>
-            <p class="weui_media_desc">由各种物质组成的巨型球状天体，叫做星球。星球有一定的形状，有自己的运行轨道。</p>
-        </div>
-        <%interns.forEach(function(intern){%>
-        <div>
-            <div class="weui_media_box weui_media_text">
-                <a href="/detail/<%=intern._id %>">
-                    <h4 class="weui_media_title"><%=intern.company %></h4>
-                    <p class="weui_media_desc"><%= intern.category %>&nbsp&nbsp<%= intern.createTime %></p>
-                </a>
-            </div>
-        </div>
-        <%});%>
+    </div>
+    <%});%>
     </div>
 </div>
 
