--- a/internship/views/post.ejs
+++ b/internship/views/post.ejs
@@ -1,24 +1,19 @@
 <%-include header%>
+<form data-toggle="validator" role="form">
+
 <div class="weui_cells weui_cells_form">
     <div class="weui_cell">
         <div class="weui_cell_hd"><label class="weui_label">公司名称</label></div>
         <div class="weui_cell_bd weui_cell_primary">
-            <input class="weui_input" type="text"name="company" placeholder="请输入公司名称">
+            <input class="weui_input " type="text"name="company" placeholder="请输入公司名称"required>
         </div>
     </div>
     <div class="weui_cell">
         <div class="weui_cell_hd"><label class="weui_label">联系方式</label></div>
         <div class="weui_cell_bd weui_cell_primary">
-            <input class="weui_input" type="text"name="email" placeholder="内推邮箱或其他联系方式">
+            <input class="weui_input" type="text"name="email" placeholder="内推邮箱或其他联系方式"required>
         </div>
     </div>
-    <div class="weui_cell">
-        <div class="weui_cell_hd"><label class="weui_label">联系方式</label></div>
-        <div class="weui_cell_bd weui_cell_primary">
-            <input class="weui_input" type="text"name="email" placeholder="内推邮箱或其他联系方式">
-        </div>
-    </div>
-
     <div class="weui_cell weui_cell_select">
         <div class="weui_cell_bd weui_cell_primary">
             <select class="weui_select" name="category">
@@ -28,17 +23,18 @@
         </div>
     </div>
     </div>
-    <div class="weui_cells_title">实习内容</div>
+    <div class="weui_cells_title">
+        <h4>实习内容</h4>
+    </div>
     <div class="weui_cells weui_cells_form">
         <div class="weui_cell">
             <div class="weui_cell_bd weui_cell_primary">
-                <textarea class="weui_textarea" placeholder="请输入实习内容" rows="3"name="content"></textarea>
-                <div class="weui_textarea_counter"><span>0</span>/200</div>
+                <textarea class="weui_textarea" placeholder="请输入实习内容" rows="4"name="content"required></textarea>
             </div>
         </div>
     </div>
-    <div class='demos-content-padded' type="submit">
-        <a href="#" class="weui_btn weui_btn_plain_default">检查后，确认发布</a>
+    <div class='demos-content-padded'>
+        <button type="submit" class="weui_btn weui_btn_plain_default">提交</button>
     </div>
+    </form>
 <%-include footer%>
-
