--- a/internship/views/post.ejs
+++ b/internship/views/post.ejs
@@ -16,7 +16,7 @@
     </div>
     <div class="weui_cell weui_cell_select">
         <div class="weui_cell_bd weui_cell_primary">
-            <select class="weui_select" name="category">
+            <select class="weui_select" type="text" name="category">
                 <option selected="" value="0">技术</option>
                 <option value="1">经管</option>
             </select>
