--- a/internship/views/post.ejs
+++ b/internship/views/post.ejs
@@ -14,14 +14,10 @@
             <input class="weui_input" type="text"name="email" placeholder="内推邮箱或其他联系方式"required>
         </div>
     </div>
-    <div class="weui_cell weui_cell_select">
-        <div class="weui_cell_bd weui_cell_primary">
-            <select class="weui_select" type="text" name="category">
-                <option selected="" value="0">技术</option>
-                <option value="1">经管</option>
-            </select>
+           <div class="weui_cell_bd weui_cell_primary">
+            <input class="weui_input" type="text"name="category" placeholder="类别"required>
         </div>
-    </div>
+
     </div>
     <div class="weui_cells_title">
         <h4>实习内容</h4>
