--- a/internship/views/post.ejs
+++ b/internship/views/post.ejs
@@ -1,5 +1,5 @@
 <%-include header%>
-<form data-toggle="validator" role="form">
+<form method="post" data-toggle="validator" role="form">
 
 <div class="weui_cells weui_cells_form">
     <div class="weui_cell">
