--- a/internship/views/detail.ejs
+++ b/internship/views/detail.ejs
@@ -9,7 +9,7 @@
         <section>
             <h3>
                 <span class="text-bold text-center"style="color:#CC6633;">时间:</span>
-                <%= moment(intern.createTime).locale('zh-cn').format('LL HH:mm:ss')%>
+                <%= moment(intern.createTime).locale('zh-cn').format('LL')%>
                 </span>
             </h3>
             <p>&nbsp;&nbsp;<%= intern.content%></p>
