--- a/internship/views/post.ejs
+++ b/internship/views/post.ejs
@@ -17,8 +17,8 @@
     <div class="weui_cell weui_cell_select">
         <div class="weui_cell_bd weui_cell_primary">
             <select class="weui_select" type="text" name="category">
-                <option selected="" value="0">技术</option>
-                <option value="1">经管</option>
+                <option selected="" value="技术">技术</option>
+                <option value="经管">经管</option>
             </select>
         </div>
     </div>
