--- a/internship/views/footer.ejs
+++ b/internship/views/footer.ejs
@@ -1,3 +1,4 @@
+</div>
 <script src="/jquery-weui/dist/lib/jquery-2.1.4.js"></script>
 <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="/jquery-weui/dist/js/jquery-weui.js"></script>
