--- a/internship/views/header.ejs
+++ b/internship/views/header.ejs
@@ -14,7 +14,7 @@
 <div class="clearfix page-nav bg-info">
     <!--这里判断user是不是为空,若为空的话显示注册登录,不为空的话说明session没过期或没有quit-->
     <%if(user){%>
-    <div class="pull-left nav-username">欢迎你,<%=user.nickname %>!</div>
+    <div class="pull-left nav-username">欢迎你,<%=user.UserId %>!</div>
     <%}else {%>
 
     <%} %>
